# nostr-forms

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATOR_GUIDE.md  PLAN.md  README.md  USER_MANUAL.md  config.example.json
.github/workflows/: ci.yml  deploy.yml
deploy/: install.sh  nginx.conf  nostr-form-rs.service
src/: config.rs  lib.rs  main.rs
src/api/: auth.rs  handlers.rs  mod.rs  server.rs  session.rs
src/crypto/: keys.rs  mod.rs  nip44.rs
src/forwarder/: dm.rs  email.rs  mod.rs  nostr.rs
src/processor/: decryptor.rs  mod.rs  worker.rs
src/registry/: models.rs  storage.rs
web/: demo.html  forms.js  forms.test.js  package.json
web/admin/: index.html  nostr-universal.js
