[package]
name = "nostr-form-rs"
version = "0.1.0"
edition = "2021"
description = "Encrypted contact forms for any website, powered by Nostr"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/nostr-form-rs"
keywords = ["nostr", "forms", "encryption", "nip-44", "contact"]
categories = ["web-programming", "cryptography"]

[dependencies]
# Networking
tungstenite = "0.24"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# HTTP
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chacha20poly1305 = "0.10"
hkdf = "0.12"
base64 = "0.21"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nostr-form-rs"
path = "src/main.rs"
